update asset image to link in firebase

--- a/src/scss/bulma-generated/generated-vars.sass
+++ b/src/scss/bulma-generated/generated-vars.sass
@@ -18,7 +18,7 @@ $white: var(--white)
   --dark: rgb(37, 46, 60)
   --info: rgb(22, 119, 223)
   --link: rgb(119, 3, 252)
-  --primary: rgb(119, 3, 252)
+  --primary: rgb(161, 227, 237)
   --success: rgb(22, 223, 149)
   --warning: rgb(242, 183, 54)
   --white: rgb(255, 255, 255)
@@ -47,9 +47,9 @@ $white: var(--white)
   --link--dark-color: rgb(122, 8, 252)
   --link--light-color: rgb(244, 235, 255)
 
-  --primary--color-invert: rgb(255, 255, 255)
-  --primary--dark-color: rgb(122, 8, 252)
-  --primary--light-color: rgb(244, 235, 255)
+  --primary--color-invert: rgba(0, 0, 0, 0.7)
+  --primary--dark-color: rgb(24, 111, 124)
+  --primary--light-color: rgb(238, 250, 252)
 
   --success--color-invert: rgba(0, 0, 0, 0.7)
   --success--dark-color: rgb(13, 135, 90)
