--- a/src/scss/bulma-generated/generated-fallback.css
+++ b/src/scss/bulma-generated/generated-fallback.css
@@ -20,9 +20,9 @@
   --button-light-bg-color-inverted: rgb(255, 255, 255);
   --button-light-border-color-inverted: rgb(255, 255, 255);
   --button-primary-color: rgb(255, 255, 255);
-  --button-primary-color-inverted: rgb(119, 3, 252);
-  --button-primary-bg-color: rgb(119, 3, 252);
-  --button-primary-border-color: rgb(119, 3, 252);
+  --button-primary-color-inverted: rgb(161, 227, 237);
+  --button-primary-bg-color: rgb(161, 227, 237);
+  --button-primary-border-color: rgb(161, 227, 237);
   --button-secondary-color: rgb(255, 255, 255);
   --button-success-color: rgb(255, 255, 255);
   --button-success-color-inverted: rgb(22, 223, 149);
@@ -47,12 +47,12 @@
 }
 
 :root {
-  --icon-primary-inverted-bg-color: rgb(119, 3, 252);
+  --icon-primary-inverted-bg-color: rgb(161, 227, 237);
   --icon-info-inverted-bg-color: rgb(22, 119, 223);
   --icon-success-inverted-bg-color: rgb(22, 223, 149);
   --icon-warning-inverted-bg-color: rgb(242, 183, 54);
   --icon-danger-inverted-bg-color: rgb(252, 3, 98);
-  --icon-primary-color: rgb(119, 3, 252);
+  --icon-primary-color: rgb(161, 227, 237);
   --icon-info-color: rgb(22, 119, 223);
   --icon-success-color: rgb(22, 223, 149);
   --icon-warning-color: rgb(242, 183, 54);
@@ -60,7 +60,7 @@
 }
 
 .is-dark {
-  --icon-primary-bg-color: rgb(119, 3, 252);
+  --icon-primary-bg-color: rgb(161, 227, 237);
   --icon-info-bg-color: rgb(22, 119, 223);
   --icon-success-bg-color: rgb(22, 223, 149);
   --icon-warning-bg-color: rgb(242, 183, 54);
@@ -85,7 +85,7 @@
 }
 
 .popover-primary {
-  --popper-theme-background-color: rgb(119, 3, 252);
+  --popper-theme-background-color: rgb(161, 227, 237);
 }
 
 .popover-info {
@@ -105,13 +105,13 @@
 }
 
 :root {
-  --vc-clr-primary: rgb(119, 3, 252);
+  --vc-clr-primary: rgb(161, 227, 237);
   --vc-clr-white: rgb(255, 255, 255);
   --vc-nav-color: rgb(255, 255, 255);
 }
 
 .is-dark {
-  --vc-clr-primary: rgb(119, 3, 252);
+  --vc-clr-primary: rgb(161, 227, 237);
   --vc-clr-white: rgb(255, 255, 255);
   --vc-nav-color: rgb(255, 255, 255);
 }
@@ -125,7 +125,7 @@
 
 :root {
   --hero-bg-color: rgb(255, 255, 255);
-  --hero-nuance-main: rgb(119, 3, 252);
+  --hero-nuance-main: rgb(161, 227, 237);
 }
 
 :root {
@@ -134,7 +134,7 @@
 
 :root {
   --footer-light-bg-color: rgb(255, 255, 255);
-  --footer-light-link-color-hover: rgb(119, 3, 252);
+  --footer-light-link-color-hover: rgb(161, 227, 237);
   --footer-dark-bg-color: rgb(37, 46, 60);
 }
 
@@ -145,14 +145,14 @@
 
 :root {
   --input-base-bg-color: rgb(255, 255, 255);
-  --slider-connect-bg: rgb(119, 3, 252);
-  --slider-tooltip-bg: rgb(119, 3, 252);
-  --slider-handle-shadow: rgb(119, 3, 252);
+  --slider-connect-bg: rgb(161, 227, 237);
+  --slider-tooltip-bg: rgb(161, 227, 237);
+  --slider-handle-shadow: rgb(161, 227, 237);
 }
 
 .is-dark {
-  --input-base-focus-color: rgb(119, 3, 252);
-  --input-inverted-focus-color: rgb(119, 3, 252);
+  --input-base-focus-color: rgb(161, 227, 237);
+  --input-inverted-focus-color: rgb(161, 227, 237);
 }
 
 :root {
@@ -196,8 +196,8 @@
 }
 
 .is-dark {
-  --blog-post-tag-border-color: rgb(119, 3, 252);
-  --blog-post-tag-color: rgb(119, 3, 252);
+  --blog-post-tag-border-color: rgb(161, 227, 237);
+  --blog-post-tag-color: rgb(161, 227, 237);
 }
 
 :root {
@@ -520,103 +520,103 @@ fieldset[disabled] .button.is-dark.is-inverted.is-outlined {
 }
 
 .button.is-primary {
-  background-color: rgb(119, 3, 252);
-  color: rgb(255, 255, 255);
+  background-color: rgb(161, 227, 237);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .button.is-primary:hover,
 .button.is-primary.is-hovered {
-  background-color: rgb(119, 3, 252);
-  color: rgb(255, 255, 255);
+  background-color: rgb(161, 227, 237);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .button.is-primary:focus,
 .button.is-primary.is-focused {
-  color: rgb(255, 255, 255);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .button.is-primary:active,
 .button.is-primary.is-active {
-  background-color: rgb(119, 3, 252);
-  color: rgb(255, 255, 255);
+  background-color: rgb(161, 227, 237);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .button.is-primary[disabled],
 fieldset[disabled] .button.is-primary {
-  background-color: rgb(119, 3, 252);
-  border-color: rgb(119, 3, 252);
+  background-color: rgb(161, 227, 237);
+  border-color: rgb(161, 227, 237);
 }
 
 .button.is-primary.is-inverted {
-  background-color: rgb(255, 255, 255);
-  color: rgb(119, 3, 252);
+  background-color: rgba(0, 0, 0, 0.7);
+  color: rgb(161, 227, 237);
 }
 
 .button.is-primary.is-inverted:hover,
 .button.is-primary.is-inverted.is-hovered {
-  background-color: rgb(255, 255, 255);
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .button.is-primary.is-inverted[disabled],
 fieldset[disabled] .button.is-primary.is-inverted {
-  background-color: rgb(255, 255, 255);
-  color: rgb(119, 3, 252);
+  background-color: rgba(0, 0, 0, 0.7);
+  color: rgb(161, 227, 237);
 }
 
 .button.is-primary.is-outlined {
-  border-color: rgb(119, 3, 252);
-  color: rgb(119, 3, 252);
+  border-color: rgb(161, 227, 237);
+  color: rgb(161, 227, 237);
 }
 
 .button.is-primary.is-outlined:hover,
 .button.is-primary.is-outlined.is-hovered,
 .button.is-primary.is-outlined:focus,
 .button.is-primary.is-outlined.is-focused {
-  background-color: rgb(119, 3, 252);
-  border-color: rgb(119, 3, 252);
-  color: rgb(255, 255, 255);
+  background-color: rgb(161, 227, 237);
+  border-color: rgb(161, 227, 237);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .button.is-primary.is-outlined[disabled],
 fieldset[disabled] .button.is-primary.is-outlined {
-  border-color: rgb(119, 3, 252);
-  color: rgb(119, 3, 252);
+  border-color: rgb(161, 227, 237);
+  color: rgb(161, 227, 237);
 }
 
 .button.is-primary.is-inverted.is-outlined {
-  border-color: rgb(255, 255, 255);
-  color: rgb(255, 255, 255);
+  border-color: rgba(0, 0, 0, 0.7);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .button.is-primary.is-inverted.is-outlined:hover,
 .button.is-primary.is-inverted.is-outlined.is-hovered,
 .button.is-primary.is-inverted.is-outlined:focus,
 .button.is-primary.is-inverted.is-outlined.is-focused {
-  background-color: rgb(255, 255, 255);
-  color: rgb(119, 3, 252);
+  background-color: rgba(0, 0, 0, 0.7);
+  color: rgb(161, 227, 237);
 }
 
 .button.is-primary.is-inverted.is-outlined[disabled],
 fieldset[disabled] .button.is-primary.is-inverted.is-outlined {
-  border-color: rgb(255, 255, 255);
-  color: rgb(255, 255, 255);
+  border-color: rgba(0, 0, 0, 0.7);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .button.is-primary.is-light {
-  background-color: rgb(244, 235, 255);
-  color: rgb(122, 8, 252);
+  background-color: rgb(238, 250, 252);
+  color: rgb(24, 111, 124);
 }
 
 .button.is-primary.is-light:hover,
 .button.is-primary.is-light.is-hovered {
-  background-color: rgb(244, 235, 255);
-  color: rgb(122, 8, 252);
+  background-color: rgb(238, 250, 252);
+  color: rgb(24, 111, 124);
 }
 
 .button.is-primary.is-light:active,
 .button.is-primary.is-light.is-active {
-  background-color: rgb(244, 235, 255);
-  color: rgb(122, 8, 252);
+  background-color: rgb(238, 250, 252);
+  color: rgb(24, 111, 124);
 }
 
 .button.is-link {
@@ -1145,13 +1145,13 @@ fieldset[disabled] .button {
 }
 
 .notification.is-primary {
-  background-color: rgb(119, 3, 252);
-  color: rgb(255, 255, 255);
+  background-color: rgb(161, 227, 237);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .notification.is-primary.is-light {
-  background-color: rgb(244, 235, 255);
-  color: rgb(122, 8, 252);
+  background-color: rgb(238, 250, 252);
+  color: rgb(24, 111, 124);
 }
 
 .notification.is-link {
@@ -1241,15 +1241,15 @@ fieldset[disabled] .button {
 }
 
 .progress.is-primary::-webkit-progress-value {
-  background-color: rgb(119, 3, 252);
+  background-color: rgb(161, 227, 237);
 }
 
 .progress.is-primary::-moz-progress-bar {
-  background-color: rgb(119, 3, 252);
+  background-color: rgb(161, 227, 237);
 }
 
 .progress.is-primary::-ms-fill {
-  background-color: rgb(119, 3, 252);
+  background-color: rgb(161, 227, 237);
 }
 
 .progress.is-link::-webkit-progress-value {
@@ -1339,9 +1339,9 @@ fieldset[disabled] .button {
 
 .table td.is-primary,
 .table th.is-primary {
-  background-color: rgb(119, 3, 252);
-  border-color: rgb(119, 3, 252);
-  color: rgb(255, 255, 255);
+  background-color: rgb(161, 227, 237);
+  border-color: rgb(161, 227, 237);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .table td.is-link,
@@ -1381,18 +1381,18 @@ fieldset[disabled] .button {
 
 .table td.is-selected,
 .table th.is-selected {
-  background-color: rgb(119, 3, 252);
-  color: rgb(255, 255, 255);
+  background-color: rgb(161, 227, 237);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .table tr.is-selected {
-  background-color: rgb(119, 3, 252);
-  color: rgb(255, 255, 255);
+  background-color: rgb(161, 227, 237);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .table tr.is-selected td,
 .table tr.is-selected th {
-  border-color: rgb(255, 255, 255);
+  border-color: rgba(0, 0, 0, 0.7);
 }
 
 .tag:not(body).is-white {
@@ -1411,13 +1411,13 @@ fieldset[disabled] .button {
 }
 
 .tag:not(body).is-primary {
-  background-color: rgb(119, 3, 252);
-  color: rgb(255, 255, 255);
+  background-color: rgb(161, 227, 237);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .tag:not(body).is-primary.is-light {
-  background-color: rgb(244, 235, 255);
-  color: rgb(122, 8, 252);
+  background-color: rgb(238, 250, 252);
+  color: rgb(24, 111, 124);
 }
 
 .tag:not(body).is-link {
@@ -1508,7 +1508,7 @@ fieldset[disabled] .button {
 
 .is-primary.textarea,
 .is-primary.input {
-  border-color: rgb(119, 3, 252);
+  border-color: rgb(161, 227, 237);
 }
 
 .is-link.textarea,
@@ -1580,16 +1580,16 @@ fieldset[disabled] .button {
 }
 
 .select.is-primary:not(:hover)::after {
-  border-color: rgb(119, 3, 252);
+  border-color: rgb(161, 227, 237);
 }
 
 .select.is-primary select {
-  border-color: rgb(119, 3, 252);
+  border-color: rgb(161, 227, 237);
 }
 
 .select.is-primary select:hover,
 .select.is-primary select.is-hovered {
-  border-color: rgb(119, 3, 252);
+  border-color: rgb(161, 227, 237);
 }
 
 .select.is-link:not(:hover)::after {
@@ -1724,25 +1724,25 @@ fieldset[disabled] .button {
 }
 
 .file.is-primary .file-cta {
-  background-color: rgb(119, 3, 252);
-  color: rgb(255, 255, 255);
+  background-color: rgb(161, 227, 237);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .file.is-primary:hover .file-cta,
 .file.is-primary.is-hovered .file-cta {
-  background-color: rgb(119, 3, 252);
-  color: rgb(255, 255, 255);
+  background-color: rgb(161, 227, 237);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .file.is-primary:focus .file-cta,
 .file.is-primary.is-focused .file-cta {
-  color: rgb(255, 255, 255);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .file.is-primary:active .file-cta,
 .file.is-primary.is-active .file-cta {
-  background-color: rgb(119, 3, 252);
-  color: rgb(255, 255, 255);
+  background-color: rgb(161, 227, 237);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .file.is-link .file-cta {
@@ -1868,7 +1868,7 @@ fieldset[disabled] .button {
 }
 
 .help.is-primary {
-  color: rgb(119, 3, 252);
+  color: rgb(161, 227, 237);
 }
 
 .help.is-link {
@@ -1959,17 +1959,17 @@ button.dropdown-item.is-active {
 }
 
 .message.is-primary {
-  background-color: rgb(244, 235, 255);
+  background-color: rgb(238, 250, 252);
 }
 
 .message.is-primary .message-header {
-  background-color: rgb(119, 3, 252);
-  color: rgb(255, 255, 255);
+  background-color: rgb(161, 227, 237);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .message.is-primary .message-body {
-  border-color: rgb(119, 3, 252);
-  color: rgb(122, 8, 252);
+  border-color: rgb(161, 227, 237);
+  color: rgb(24, 111, 124);
 }
 
 .message.is-link {
@@ -2270,13 +2270,13 @@ button.dropdown-item.is-active {
 }
 
 .navbar.is-primary {
-  background-color: rgb(119, 3, 252);
-  color: rgb(255, 255, 255);
+  background-color: rgb(161, 227, 237);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .navbar.is-primary .navbar-brand > .navbar-item,
 .navbar.is-primary .navbar-brand .navbar-link {
-  color: rgb(255, 255, 255);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .navbar.is-primary .navbar-brand > a.navbar-item:focus,
@@ -2285,16 +2285,16 @@ button.dropdown-item.is-active {
 .navbar.is-primary .navbar-brand .navbar-link:focus,
 .navbar.is-primary .navbar-brand .navbar-link:hover,
 .navbar.is-primary .navbar-brand .navbar-link.is-active {
-  background-color: rgb(119, 3, 252);
-  color: rgb(255, 255, 255);
+  background-color: rgb(161, 227, 237);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .navbar.is-primary .navbar-brand .navbar-link::after {
-  border-color: rgb(255, 255, 255);
+  border-color: rgba(0, 0, 0, 0.7);
 }
 
 .navbar.is-primary .navbar-burger {
-  color: rgb(255, 255, 255);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 @media screen and (min-width: 1024px) {
@@ -2302,7 +2302,7 @@ button.dropdown-item.is-active {
   .navbar.is-primary .navbar-start .navbar-link,
   .navbar.is-primary .navbar-end > .navbar-item,
   .navbar.is-primary .navbar-end .navbar-link {
-    color: rgb(255, 255, 255);
+    color: rgba(0, 0, 0, 0.7);
   }
 
   .navbar.is-primary .navbar-start > a.navbar-item:focus,
@@ -2317,25 +2317,25 @@ button.dropdown-item.is-active {
   .navbar.is-primary .navbar-end .navbar-link:focus,
   .navbar.is-primary .navbar-end .navbar-link:hover,
   .navbar.is-primary .navbar-end .navbar-link.is-active {
-    background-color: rgb(119, 3, 252);
-    color: rgb(255, 255, 255);
+    background-color: rgb(161, 227, 237);
+    color: rgba(0, 0, 0, 0.7);
   }
 
   .navbar.is-primary .navbar-start .navbar-link::after,
   .navbar.is-primary .navbar-end .navbar-link::after {
-    border-color: rgb(255, 255, 255);
+    border-color: rgba(0, 0, 0, 0.7);
   }
 
   .navbar.is-primary .navbar-item.has-dropdown:focus .navbar-link,
   .navbar.is-primary .navbar-item.has-dropdown:hover .navbar-link,
   .navbar.is-primary .navbar-item.has-dropdown.is-active .navbar-link {
-    background-color: rgb(119, 3, 252);
-    color: rgb(255, 255, 255);
+    background-color: rgb(161, 227, 237);
+    color: rgba(0, 0, 0, 0.7);
   }
 
   .navbar.is-primary .navbar-dropdown a.navbar-item.is-active {
-    background-color: rgb(119, 3, 252);
-    color: rgb(255, 255, 255);
+    background-color: rgb(161, 227, 237);
+    color: rgba(0, 0, 0, 0.7);
   }
 }
 
@@ -2795,16 +2795,16 @@ a.navbar-item.is-active,
 }
 
 .panel.is-primary .panel-heading {
-  background-color: rgb(119, 3, 252);
-  color: rgb(255, 255, 255);
+  background-color: rgb(161, 227, 237);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .panel.is-primary .panel-tabs a.is-active {
-  border-bottom-color: rgb(119, 3, 252);
+  border-bottom-color: rgb(161, 227, 237);
 }
 
 .panel.is-primary .panel-block.is-active .panel-icon {
-  color: rgb(119, 3, 252);
+  color: rgb(161, 227, 237);
 }
 
 .panel.is-link .panel-heading {
@@ -3085,49 +3085,49 @@ a.navbar-item.is-active,
 }
 
 .hero.is-primary {
-  background-color: rgb(119, 3, 252);
-  color: rgb(255, 255, 255);
+  background-color: rgb(161, 227, 237);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .hero.is-primary .title {
-  color: rgb(255, 255, 255);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .hero.is-primary .subtitle {
-  color: rgb(255, 255, 255);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .hero.is-primary .subtitle a:not(.button),
 .hero.is-primary .subtitle strong {
-  color: rgb(255, 255, 255);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 @media screen and (max-width: 1023px) {
   .hero.is-primary .navbar-menu {
-    background-color: rgb(119, 3, 252);
+    background-color: rgb(161, 227, 237);
   }
 }
 
 .hero.is-primary .navbar-item,
 .hero.is-primary .navbar-link {
-  color: rgb(255, 255, 255);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .hero.is-primary a.navbar-item:hover,
 .hero.is-primary a.navbar-item.is-active,
 .hero.is-primary .navbar-link:hover,
 .hero.is-primary .navbar-link.is-active {
-  background-color: rgb(119, 3, 252);
-  color: rgb(255, 255, 255);
+  background-color: rgb(161, 227, 237);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .hero.is-primary .tabs a {
-  color: rgb(255, 255, 255);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .hero.is-primary .tabs.is-boxed a,
 .hero.is-primary .tabs.is-toggle a {
-  color: rgb(255, 255, 255);
+  color: rgba(0, 0, 0, 0.7);
 }
 
 .hero.is-primary .tabs.is-boxed a:hover,
@@ -3139,9 +3139,9 @@ a.navbar-item.is-active,
 .hero.is-primary .tabs.is-boxed li.is-active a:hover,
 .hero.is-primary .tabs.is-toggle li.is-active a,
 .hero.is-primary .tabs.is-toggle li.is-active a:hover {
-  background-color: rgb(255, 255, 255);
-  border-color: rgb(255, 255, 255);
-  color: rgb(119, 3, 252);
+  background-color: rgba(0, 0, 0, 0.7);
+  border-color: rgba(0, 0, 0, 0.7);
+  color: rgb(161, 227, 237);
 }
 
 .hero.is-link {
@@ -3445,10 +3445,10 @@ a.navbar-item.is-active,
 }
 
 :root {
-  --gradient-primary-start-color: rgb(119, 3, 252);
-  --gradient-accent-end-color: rgb(119, 3, 252);
+  --gradient-primary-start-color: rgb(161, 227, 237);
+  --gradient-accent-end-color: rgb(161, 227, 237);
 }
 
 .link.has-underline::after {
-  background: rgb(119, 3, 252);
+  background: rgb(161, 227, 237);
 }
