--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -9,7 +9,7 @@
 ========================================================================== */
 
 @import 'https://fonts.googleapis.com/css2?family=Moulpali&display=swap';
-
+@import 'https://fonts.googleapis.com/css2?family=Moulpali&display=swap';
 
 
 // bulma-css-vars
