--- a/src/scss/utilities/_helpers.scss
+++ b/src/scss/utilities/_helpers.scss
@@ -462,7 +462,7 @@ hr {
 ========================================================================== */
 
 .paragraph {
-  font-family: var(--font);
+  font-family: var(--paragraph);
   color: var(--paragraph-color);
 
   &.is-inverted {
