--- a/src/scss/css-variables/_typography.scss
+++ b/src/scss/css-variables/_typography.scss
@@ -9,7 +9,7 @@
 ========================================================================== */
 
 @import 'https://fonts.googleapis.com/css2?family=Preahvihear&display=swap';
-@import 'https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap';
+@import 'https://fonts.googleapis.com/css2?family=Moulpali&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap';
 
 .kh{
   /* stylelint-disable-next-line font-family-name-quotes */
@@ -31,8 +31,8 @@
 
 :root {
   
-  --font: , 'Preahvihear', 'Roboto', sans-serif;
-  --font-alt: 'Preahvihear', sans-serif;
+  --font: , 'Moulpali', 'Roboto', sans-serif;
+  --font-alt: 'Moulpali', sans-serif;
   --title-color: var(--dark-text);
   --title-color-inverted: var(--white-smoke);
   --paragraph-color: var(--medium-text);
